# media

./: appveyor.yml
backends/auto/: Cargo.toml  lib.rs
backends/gstreamer/: Cargo.toml  audio_decoder.rs  audio_sink.rs  audio_stream_reader.rs  datachannel.rs  device_monitor.rs  lib.rs  media_capture.rs  media_stream.rs  media_stream_source.rs  player.rs  registry_scanner.rs  render.rs  source.rs  webrtc.rs
backends/gstreamer/render/: Cargo.toml
backends/gstreamer/render-android/: Cargo.toml  lib.rs
backends/gstreamer/render-unix/: Cargo.toml  lib.rs
examples/: Cargo.toml  simple_player.rs
