[package]
name = "servo-media-gstreamer"
version = "0.1.0"
authors = ["The Servo Project Developers"]
edition = "2021"

[build-dependencies]
regex = "1.0"
zip = "0.3.1"
lazy_static = "1.0"

[lib]
name = "servo_media_gstreamer"
path = "lib.rs"

[dependencies]
boxfnonce = "0.1.0"
mime = "0.3.13"
log = "0.4"

[dependencies.byte-slice-cast]
version = "0.2"

[dependencies.glib]
version = "0.17"

[dependencies.glib-ffi]
package = "glib-sys"
version = "0.17"

[dependencies.gst-ffi]
package = "gstreamer-sys"
version = "0.20"

[dependencies.gst]
package = "gstreamer"
version = "0.20"

[dependencies.gst_app]
package = "gstreamer-app"
version = "0.20"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.20"

[dependencies.gst-base]
package = "gstreamer-base"
version = "0.20"

[dependencies.gst-player]
package = "gstreamer-player"
version = "0.20"

[dependencies.gst-sdp]
package = "gstreamer-sdp"
version = "0.20"

[dependencies.gst-webrtc]
package = "gstreamer-webrtc"
version = "0.20"
features = ["v1_18"]

[dependencies.gst-video]
package = "gstreamer-video"
version = "0.20"

[dependencies.ipc-channel]
version = "0.14"

[dependencies.lazy_static]
version = "1.2.0"

[dependencies.servo-media]
path = "../../servo-media"

[dependencies.servo-media-audio]
path = "../../audio"

[dependencies.servo-media-player]
path = "../../player"

[dependencies.url]
version = "2.0"

[dependencies.servo-media-streams]
path = "../../streams"

[dependencies.servo-media-traits]
path = "../../traits"

[dependencies.servo-media-webrtc]
path = "../../webrtc"

[dependencies.servo-media-gstreamer-render]
path = "render"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
servo-media-gstreamer-render-unix = { path = "render-unix", features = ["gl-egl", "gl-x11"] }

[target.'cfg(target_os = "android")'.dependencies]
servo-media-gstreamer-render-android = { path = "render-android" }
