[package]
name = "servo-media-gstreamer-render-android"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[lib]
name = "servo_media_gstreamer_render_android"
path = "lib.rs"

[dependencies.glib]
version = "0.17"

[dependencies.gstreamer]
version = "0.20"

[dependencies.gstreamer-gl]
version = "0.20"

[dependencies.gstreamer-gl-egl]
version = "0.20"

[dependencies.gstreamer-video]
version = "0.20"

[dependencies.servo-media-player]
path = "../../../player"

[dependencies.servo-media-gstreamer-render]
path = "../render"
