[package]
name = "servo-media-gstreamer-render-unix"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[features]
gl-egl = ["gstreamer-gl-egl"]
gl-x11 = ["gstreamer-gl-x11"]
gl-wayland = ["gstreamer-gl-wayland"]

[lib]
name = "servo_media_gstreamer_render_unix"
path = "lib.rs"

[dependencies.glib]
version = "0.17"

[dependencies.gstreamer]
version = "0.20"

[dependencies.gstreamer-gl]
version = "0.20"

[dependencies.gstreamer-gl-egl]
version = "0.20"
optional = true

[dependencies.gstreamer-gl-x11]
version = "0.20"
optional = true

[dependencies.gstreamer-gl-wayland]
version = "0.20"
optional = true

[dependencies.gstreamer-video]
version = "0.20"

[dependencies.servo-media-player]
path = "../../../player"

[dependencies.servo-media-gstreamer-render]
path = "../render"
